modify dates insertion in functionsManagement interface.